discussion/kv_engine/151752/151752_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-45523: Fix race in takeover blocking when buffer log full

There is a race condition in the blocking of front end ops during
a takeover where if the buffer log is full we unblock operations
without transitioning from takeoverSend(pending) to
takeoverWait(pending). This could cause us to indefinitely hang
during a rebalance if the rate of operations is high enough.

Correct this race condition by moving the unblocking of ops to
after we transition the stream state.

Unblocking operations is of questionable value here and if we have
blocked operations then unblocking them again will only serve to
make takeover longer. That issue should be addressed, but is
orthogonal to this issue.

Change-Id: I3b04165093170756628c9370d827c27f728865d9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-04-21 14:11:29.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-04-21 14:30:16.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10110/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30095/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:4097:36:
error: too many arguments to function call, expected 0, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30095/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35123/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\evp_store_single_threaded_test.cc(4097): error C2660: "ActiveStream::snapshotMarkerAckReceived": function does not take 1 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35123/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8441/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:4097:36: error: too many arguments to function call, expected 0, have 1 [clang-diagnostic-error]
    as0->snapshotMarkerAckReceived(*producer);
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/active_stream.h:168:5: note: "snapshotMarkerAckReceived" declared here
    void snapshotMarkerAckReceived();
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8441/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:4097:36:
error: too many arguments to function call, expected 0, have 1 [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8441/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9039/ : FAILURE

Compile error at [2021-04-21T14:18:40.342Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:4097:36:
error: too many arguments to function call, expected 0, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9039/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9969/ : FAILURE

Compile error at [2021-04-21T14:13:55.009Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:4097:45:
error: no matching function for call to ?ActiveStream::snapshotMarkerAckReceived(std::__shared_ptr_access<MockDcpProducer, __gnu_cxx::_S_atomic, false, false>::element_type&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9969/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17908/ : FAILURE

Compile error at [2021-04-21T14:15:53.449Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:4097:36:
error: too many arguments to function call, expected 0, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/17908/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10355/ : FAILURE

Compile error at [2021-04-21T14:13:14.576Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:4097:36:
error: too many arguments to function call, expected 0, have 1
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10355/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/6991/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
